--- a/rating.html
+++ b/rating.html
@@ -253,7 +253,7 @@
                         <td>Bancarrota</td>
                         <td>Daño de marca</td>
                         <td></td>
-                        <td>Millones lorem*50</td>
+                        <td>Millones</td>
                     </tr>
                     <tr> </tr>
                 </tbody>
@@ -261,6 +261,13 @@
         </div>
     </div>
 
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+            <li class="nav-item"><a href="./test.html" class="nav-link px-2 text-muted">Evaluación</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2022 Luis Sarmiento - ALLEN23</p>
+    </footer>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
