--- a/test.html
+++ b/test.html
@@ -329,10 +329,10 @@
                                 <option value="2">2 - </option>
                                 <option value="3">3 - Un individuo</option>
                                 <option value="4">4 - </option>
-                                <option value="5">5 - cientos personas</option>
+                                <option value="5">5 - Cientos personas</option>
                                 <option value="6">6 - </option>
                                 <option value="7">7 - Miles Personas</option>
-                                <option value="8"8 - ></option>
+                                <option value="8">8 - </option>
                                 <option value="9">9 - Millones</option>
                             </select>
 
