--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
 
-    <div class="container" style="min-height: 95vh;">
+    <div class="container my-4 p-5 shadow-lg p-3 mb-5 bg-body rounded"style="width: 60%;">
         <h1 class="text-center">The OWASP Risk Rating Methodology</h1>
         <a href="https://owasp.org/www-community/OWASP_Risk_Rating_Methodology" target="_blank">Fuente oficial de
             OWASP</a>
