--- a/rating.html
+++ b/rating.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </header>
-    <div class="container my-4">
+    <div class="container my-4 p-4 shadow-lg p-3 mb-5 bg-body rounded"">
         <div class="table-responsive">
             <table class="table table-striped table-bordered">
                 <thead class="thead">
